test/tests/stages/18_structures/invalid_types/extra_credit/scalar_required/cast_union_to_int.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  union
  identifier(u)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(x)
  =
  {
  const int(10)
  }
  ;
  return
  (
  int
  )
  identifier(x)
  ;
  }
